Bugfix/2022 06 13 (#17)
* Process singles properly

* Allow editing of repeat cell properties

* Fix background colour overlap

* Update AIE for line original text

* version bump

--- a/src/components/aif/aif.css
+++ b/src/components/aif/aif.css
@@ -14,33 +14,16 @@
   flex-grow: 1;
 }
 
-.aif-line-item {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-.aif-line-item.left {
-  align-content:flex-start;
-}
-
-.aif-line-item.centre {
-  align-content:center;
-}
-
-.aif-line-item.right {
-  align-content:flex-end;
-}
-
 .aif-line-buttons {
   right: 0;
   margin-left: 0.25rem;
   width: 52px;
-  display:flex;
+  display: flex;
   flex-direction: row;
 }
 
-.aif-line.aif-readonly .aif-line-item-holder {
+.aif-line.aif-readonly .aif-line-item,
+.aif-line-item.aif-readonly {
   /* background-color: rgb(240, 221, 168); */
   background-color: #d3d3d329;
   color: #0d0d0dc7;
